<resources>
    <string name="app_name">Home Automation</string>
    <string name="value_1">Value 1:</string>
    <string name="push_n_button_4">push\n button 4</string>
    <string name="value_2">Value 2:</string>
    <string name="value_3">Value 3:</string>
    <string name="value_4">Value 4:</string>
    <string name="nulll">NULL</string>
    <string name="toggle_button_1">Toggle Button 1</string>
    <string name="toggle_button_2">Toggle Button 2</string>
    <string name="toggle_button_3">Toggle Button 3</string>
    <string name="push_n_button_3">push\n button 3</string>
    <string name="push_n_button_2">push\n button 2</string>
    <string name="push_n_button_1">push\n button 1</string>
    <string name="toggle_button_4">Toggle Button 4</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="push_button_1">push Button 1</string>
    <string name="push_button_2">push Button 2</string>
    <string name="push_button_3">push Button 3</string>
    <string name="push_button_4">push Button 4</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="forgot_password">Forgot Username or Password ?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up </string>
    <string name="log_out">Log out</string>
    <string name="loading">Loading...</string>
    <string name="redirecting">update are available you will redirecting in</string>
    <string name="no_internet_connection">no internet connection</string>
    <string name="checkinternet">checking internet connection</string>
    <string name="checking_for_update">checking for update</string>
    <string name="i_will_update_later_continue_any_way">i will update later continue any way</string>
</resources>