<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_of_ui"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="#88ffffff"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <TextView

                android:id="@+id/tg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/toggle_button_1"
                android:textColor="@color/black" />

            <TextView

                android:id="@+id/tg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/toggle_button_2"
                android:textColor="@color/black" />

            <TextView

                android:id="@+id/tg3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/toggle_button_3"
                android:textColor="@color/black" />

            <TextView

                android:id="@+id/tg4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/toggle_button_4"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ToggleButton
                android:id="@+id/but_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#EF6330"
                android:text="@string/button_1"
                android:textColor="@color/white" />

            <ToggleButton
                android:id="@+id/but_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#EF6330"
                android:text="@string/button_2"
                android:textColor="@color/white" />

            <ToggleButton
                android:id="@+id/but_three"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#EF6330"
                android:text="@string/button_3"
                android:textColor="@color/white" />

            <ToggleButton
                android:id="@+id/but_four"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#EF6330"
                android:text="@string/button_4"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView

                android:id="@+id/push1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/push_button_1"
                android:textColor="@color/black" />

            <TextView

                android:id="@+id/push2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/push_button_2"
                android:textColor="@color/black" />

            <TextView

                android:id="@+id/push3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/push_button_3"
                android:textColor="@color/black" />

            <TextView

                android:id="@+id/push4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/push_button_4"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#EF6330"
                android:gravity="center"
                android:text="@string/push_n_button_1"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#EF6330"
                android:gravity="center"
                android:text="@string/push_n_button_2"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#EF6330"
                android:gravity="center"
                android:text="@string/push_n_button_3"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#EF6330"
                android:gravity="center"
                android:text="@string/push_n_button_4"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0">

            <TextView


                android:id="@+id/val1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/value_1"
                android:textColor="@color/black" />

            <TextView

                android:id="@+id/val2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/value_2"
                android:textColor="@color/black" />

            <TextView

                android:id="@+id/val3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/value_3"
                android:textColor="@color/black" />

            <TextView

                android:id="@+id/val4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/value_4"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/value1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#EF6330"
                android:gravity="center"
                android:text="@string/nulll"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/value2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#EF6330"
                android:gravity="center"
                android:text="@string/nulll"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/value3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#EF6330"
                android:gravity="center"
                android:text="@string/nulll"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/value4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#EF6330"
                android:gravity="center"
                android:text="@string/nulll"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>


    </TableLayout>

    <LinearLayout
        android:background="#8C0606"
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="114dp"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034">

        <ImageButton
            android:layout_gravity="center"
            android:id="@+id/logout1"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:background="#0000"
            android:src="@drawable/common_full_open_on_phone" />

        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/logout2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:text="@string/log_out"
            android:textColor="#fff"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>