<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_of_ui">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="25.0sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="354.0dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="#88ffffff"
        android:orientation="vertical"
        android:padding="30.0dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50.0dip"
            android:orientation="horizontal"
            android:padding="5.0dip">

            <ImageView
                android:layout_width="30.0dip"
                android:layout_height="fill_parent"
                android:src="@drawable/user2" />


            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="#566769" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5.0dip">

            <ImageView
                android:layout_width="30.0dip"
                android:layout_height="fill_parent"
                android:src="@drawable/lock2" />


            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="#566769" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/spassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:textColor="#566769"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/showpass"
                android:layout_width="0.0dip"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:text="@string/show_password"
                android:textColor="#566769"
                android:textSize="15.0sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="5.0dip"
            android:text="@string/forgot_password"
            android:textColor="#566769"
            android:textSize="15sp" />

        <Button
            android:id="@+id/signin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50.0dip"
            android:background="#ffef6330"
            android:text="@string/sign_in"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="90.0dip"
        android:layout_height="91.0dip"
        android:layout_marginTop="32dp"
        android:src="@drawable/user1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="#00000000"
        android:textColor="#95A2AA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_menu_info_details" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="#95A2AA"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>